hard-gists/1423373/run.log
=== Docker Run Log for 1423373 ===
Started at: Mi 29. Okt 12:13:27 CET 2025

[2025-10-29 12:13:28] START: Running container for 1423373
[2025-10-29 12:13:28] SUCCESS: Container 40b3c704320152a13c50f615cae58401cda07a57e0e6c66630f7e39ccd088768 started for 1423373
=== Container logs for 1423373 ===
  File "/snippet.py", line 118
    print 'Relative error: %s' % (dual_gap / dual_obj)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1423373 ===
[2025-10-29 12:13:30] INFO: Container 40b3c704320152a13c50f615cae58401cda07a57e0e6c66630f7e39ccd088768 has stopped
